# otus-cpp-basic

./: .gitignore  README.md
homework_2/: CMakeLists.txt  hello_world.cpp
homework_3/: CMakeLists.txt  high_scores.txt  main.cpp
homework_3/source/: check_value.cpp
homework_4/: Ball.cpp  Ball.hpp  CMakeCache.txt  CMakeLists.txt  Color.cpp  Makefile  Physics.cpp  Velocity.hpp  World.cpp  cmake_install.cmake
homework_5/: CMakeLists.txt  statistics.cpp
homework_5/source/: chrono_example.cpp
homework_6/: Array.hpp  BidirectionalList.hpp  CMakeLists.txt  List.hpp  main.cpp
homework_7/: CMakeLists.txt
homework_7/src/: Array.hpp  List.hpp  main.cpp
homework_7/test/: test_array.cpp  test_list.cpp
homework_8/: CMakeLists.txt
homework_8/src/: main.cpp  threads_benchmark.cpp  threads_benchmark.hpp  worker.cpp  worker.hpp
homework_8/tests/: test_worker.cpp
homework_9/: custom_pool.cpp  parrallel_group.cpp  parrallel_topk.cpp  parrallel_topk2.cpp  pool_topk.cpp  topk_words.cpp
project/: .env  CMakeLists.txt  Database.h  Postgres.h  Postgres_auth.cpp  Postgres_tasks.cpp  WorkScheduler.cpp  WorkScheduler.h  WorkScheduler_auth.cpp  WorkScheduler_draw.cpp  WorkScheduler_menu.cpp  main.cpp  project.sql  utils.h  utils_tests.cpp  utils_time.h
